[package]
name = "mprs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# chrono = "0.4.34"
# comfy-table = "7.1.0"
# crossterm = "0.27.0"
dirs = "5.0.1"
# glob = "0.3.1"
# lofty = "0.18.2"
# rand = "0.8.5"
ratatui = "0.26.1"
serde = { version = "1.0.196", features = ["derive"] }
stopwatch = "0.0.7"
# termsize = "0.1.6"
tokio = { version = "1.37.0", features = ["full"] }
