[package]
name = "mprs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# chrono = "0.4.34"
# comfy-table = "7.1.0"
# crossterm = "0.27.0"
# glob = "0.3.1"
# rand = "0.8.5"
# termsize = "0.1.6"
dirs = "5.0.1"
ratatui = "0.26.1"
serde = { version = "1.0.196", features = ["derive"] }
bincode = "1.3.3"
stopwatch = "0.0.7"
tokio = { version = "1.37.0", features = ["full"] }
rspotify = "0.13.1"
lofty = "0.19.2"
log = "0.4.21"
fern = "0.6.2"
anyhow = "1.0.82"
crossterm = "0.27.0"
image = { version = "0.24.5", default-features = false, features = ["jpeg"] }
ratatui-image = "1.0.0"
rand = "0.8.5"
